--- a/extract_nuspec_deps/requirements.txt
+++ b/extract_nuspec_deps/requirements.txt
@@ -1,35 +1,31 @@
-Package           Version
------------------ ---------
-appnope           0.1.0
-backcall          0.2.0
-bokeh             2.2.1
-certifi           2020.6.20
-cycler            0.10.0
-decorator         4.4.2
-ipython           7.18.1
-ipython-genutils  0.2.0
-jedi              0.17.2
-Jinja2            2.11.2
-kiwisolver        1.2.0
-MarkupSafe        1.1.1
-matplotlib        3.3.1
-networkx          2.5
-numpy             1.19.1
-packaging         20.4
-parso             0.7.1
-pexpect           4.8.0
-pickleshare       0.7.5
-Pillow            7.2.0
-pip               20.2.2
-prompt-toolkit    3.0.7
-ptyprocess        0.6.0
-Pygments          2.6.1
-pyparsing         2.4.7
-python-dateutil   2.8.1
-PyYAML            5.3.1
-setuptools        41.2.0
-six               1.15.0
-tornado           6.0.4
-traitlets         5.0.3
-typing-extensions 3.7.4.3
-wcwidth           0.2.5
+appnope==0.1.0
+backcall==0.2.0
+bokeh==2.2.1
+certifi==2020.6.20
+cycler==0.10.0
+decorator==4.4.2
+ipython==7.18.1
+ipython-genutils==0.2.0
+jedi==0.17.2
+Jinja2==2.11.2
+kiwisolver==1.2.0
+MarkupSafe==1.1.1
+matplotlib==3.3.1
+networkx==2.5
+numpy==1.19.1
+packaging==20.4
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.2.0
+prompt-toolkit==3.0.7
+ptyprocess==0.6.0
+Pygments==2.6.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+PyYAML==5.3.1
+six==1.15.0
+tornado==6.0.4
+traitlets==5.0.3
+typing-extensions==3.7.4.3
+wcwidth==0.2.5
