--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,11 @@ readme = "README.md"
 python = "^3.11"
 requests = "^2.31.0"
 mypy = "^1.5.1"
+types-requests = "^2.31.0.2"
 
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.5.1"
 
 [build-system]
 requires = ["poetry-core"]
