--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 requests = "^2.31.0"
 mypy = "^1.5.1"
 types-requests = "^2.31.0.2"
+numpy = "^1.25.2"
+numexpr = "^2.8.5"
 
 
 [build-system]
