--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ types-requests = "^2.31.0.2"
 numpy = "^1.25.2"
 numexpr = "^2.8.5"
 ipython = "^8.14.0"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
