--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ numpy = "^1.25.2"
 numexpr = "^2.8.5"
 ipython = "^8.14.0"
 python-dotenv = "^1.0.0"
+urllib3 = "^2.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
