--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ numexpr = "^2.8.5"
 ipython = "^8.14.0"
 python-dotenv = "^1.0.0"
 urllib3 = "^2.1.0"
+certifi = "^2023.11.17"
 
 
 [tool.poetry.group.dev.dependencies]
