--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ ipython = "^8.14.0"
 python-dotenv = "^1.0.0"
 urllib3 = "^2.1.0"
 certifi = "^2023.11.17"
+scipy = "^1.11.4"
 
 
 [tool.poetry.group.dev.dependencies]
