--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,21 @@ authors = ["Tord Aronsen <tordaro@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-requests = "^2.31.0"
-mypy = "^1.5.1"
-types-requests = "^2.31.0.2"
-numpy = "^1.25.2"
-numexpr = "^2.8.5"
-ipython = "^8.14.0"
-python-dotenv = "^1.0.0"
-urllib3 = "^2.1.0"
-certifi = "^2023.11.17"
-scipy = "^1.11.4"
+python = ">3.11"
+requests = ">2.31.0"
+mypy = ">1.5.1"
+types-requests = ">2.31.0.2"
+numpy = ">1.25.2"
+numexpr = ">2.8.5"
+ipython = ">8.14.0"
+python-dotenv = ">1.0.0"
+urllib3 = ">2.1.0"
+certifi = ">2023.11.17"
+scipy = ">1.11.4"
 
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.5.1"
+mypy = ">1.5.1"
 
 [build-system]
 requires = ["poetry-core"]
